--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donuts-Art</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> 
+    <style type="text/css" media="screen, print">
+        @font-face {
+            font-family: "Bauhaus 93";
+            src: url("font/BAUHS93.ttf");
+          }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Donuts-Art</h1>
+    <span class="icono"></span>
+    <span class="celeste">Celeste</span>
+    <p class="hello">Hello</p>
+    <p class="world">World!!</p>
+    <div class="ellipse3"></div>
+    <div class="rectangle24"></div>
+    <span class="rectangle23"></span>
+    <p class="r23p1">I´m Celeste Davalos</p>
+    <p class="r23p2">A Graphic Designer, UI/UX Designer</p>
+    <p class="r23p3">and an Illustrator.</p>
+    <div class="ellipse4"></div>
 
 <script src="main.js"></script>
 </body>
