add nav, header and section

--- a/index.html
+++ b/index.html
@@ -17,17 +17,40 @@
     </style>
 </head>
 <body>
-    <span class="icono"></span>
-    <span class="celeste">Celeste</span>
-    <p class="hello">Hello</p>
-    <p class="world">World!!</p>
-    <div class="ellipse3"></div>
-    <div class="rectangle24"></div>
-    <span class="rectangle23"></span>
-    <p class="r23p1">I´m Celeste Davalos</p>
-    <p class="r23p2">A Graphic Designer, UI/UX Designer</p>
-    <p class="r23p3">and an Illustrator.</p>
-    <div class="ellipse4"></div>
+    <nav>
+        <span class="icono"></span>
+        <span class="celeste">Celeste</span>
+        <div class="btnAbout ">
+            <button class="txtAbout">About me</button>
+        </div>
+        <div class="btnWork">
+            <button class="txtWork">Work</button>            
+        </div>
+        <div class="btnContact">
+            <button class="txtContact">Contact</button>
+        </div>  
+    </nav>
+    <header>        
+        <p class="hello">Hello</p>
+        <p class="world">World!!</p>
+        <div class="ellipse3"></div>
+        <div class="rectangle24"></div>
+        <span class="rectangle23"></span>
+        <p class="r23p1">I´m Celeste Davalos</p>
+        <p class="r23p2">A Graphic Designer, UI/UX Designer</p>
+        <p class="r23p3">and an Illustrator.</p>
+        <div class="ellipse4"></div>
+            <a href="http://www.instagram.com/celeste_donuts_art"><img class="homeInstagram" src="./img/Img-Instagram.png" alt="Instagram"></a>
+            <a href="https://www.behance.net/gallery/144457417/App-ArtNow-UXUI"><img class="homeBehance" src="./img/Img-Behance.png" alt="Behance"></a>
+            <a href="http://"><img class="homeTweeter" src="./img/Img-Twitter.png" alt=""></a>            
+    </header>
+    <section class="rectangle40">
+        <div class="rectangle2">
+            <span class="r2title">About me</span>
+            <p class="r2txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et pharetra, aliquet diam. Etiam aliquam aenean urna orci adipiscing eu sed nisl. Tortor ultricies mauris tempus aliquam. Pharetra, vel, rhoncus interdum porttitor mattis sit vestibulum, aliquet. Enim, at at vel et vitae feugiat. Scelerisque diam accumsan pellentesque nibh.</p>
+        </div>
+        <div class="imgCeleste"></div>
+    </section>
 
 <script src="main.js"></script>
 </body>
