--- a/index2.html
+++ b/index2.html
@@ -31,9 +31,9 @@
             <h1 class="header__logo--text">Celeste <br>Donuts Art</h1>
         </div>        
         <nav>
-            <a>About me</a>
-            <a>My Work</a>
-            <a>Contact</a>
+            <a href="#about">About me</a>
+            <a href="#work">My Work</a>
+            <a href="#contact">Contact</a>
         </nav>
         <div class="social">
             <a href="">
@@ -50,124 +50,126 @@
             </a> 
         </div>
     </header>
-    <section class="main">
-        <div class="container__text">
-            <div class="container__text--center">
-                <h2>Hello I’m <br> Celeste</h2>
-                <h3>Graphic Designer, UX/UI Designer <br>and Ilustrator</h3>
-                <button><p>Know me</p></button>
-            </div>          
-        </div>
-        <div class="container__img">
-            <img class="main--img" src="img/Celeste2.png">
-        </div>
-        
-    </section>
-    <section class="about">
-        <div>
-            <div class="about__content">
-                <div class="about__content--text">
-                    <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et pharetra, aliquet diam. Etiam aliquam 
-                        aenean urna orci adipiscing eu sed nisl. Tortor ultricies mauris tempus aliquam. Pharetra, vel,
-                        rhoncus interdum porttitor mattis sit vestibulum.</p>
-                </div>    
-                <div class="about__content--carr"> 
-                    <div class="swiper mySwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="img/Rectangle 3.png"></div>
-                            <div class="swiper-slide"><img src="img/Rectangle 4.png"></div>         
+        <section class="main">
+            <div class="container__text">
+                <div class="container__text--center">
+                    <h2>Hello I’m <br> Celeste</h2>
+                    <h3>Graphic Designer, UX/UI Designer <br>and Ilustrator</h3>
+                    <button><p>Know me</p></button>
+                </div>          
+            </div>
+            <div class="container__img">
+                <img class="main--img" src="img/Celeste2.png">
+            </div>
+            
+        </section>
+    <a name="about" id="about"></a>
+        <section class="about">
+            <div>
+                <div class="about__content">
+                    <div class="about__content--text">
+                        <h2>About me</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et pharetra, aliquet diam. Etiam aliquam 
+                            aenean urna orci adipiscing eu sed nisl. Tortor ultricies mauris tempus aliquam. Pharetra, vel,
+                            rhoncus interdum porttitor mattis sit vestibulum.</p>
+                    </div>    
+                    <div class="about__content--carr"> 
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="img/Rectangle 3.png"></div>
+                                <div class="swiper-slide"><img src="img/Rectangle 4.png"></div>         
+                            </div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                         </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
                     </div>
                 </div>
-            </div>
-            <div class="containers">
-                <div class="containerSkills container--pink">
-                    <img src="img/Graphic Design.png">
-                    <h3>Graphic Design</h3>
-                    <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
+                <div class="containers">
+                    <div class="containerSkills container--pink">
+                        <img src="img/Graphic Design.png">
+                        <h3>Graphic Design</h3>
+                        <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
+                    </div>
+                    <div class="containerSkills container--yellow">
+                        <img src="img/Illustration.png">
+                        <h3>Ilustrator</h3>
+                        <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
+                    </div>    
+                    <div class="containerSkills container--blue">
+                        <img src="img/UX Design.png">
+                        <h3>Ux/Ui</h3>
+                        <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
+                    </div> 
                 </div>
-                <div class="containerSkills container--yellow">
-                    <img src="img/Illustration.png">
-                    <h3>Ilustrator</h3>
-                    <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
-                </div>    
-                <div class="containerSkills container--blue">
-                    <img src="img/UX Design.png">
-                    <h3>Ux/Ui</h3>
-                    <p>I focus on designing effective brand communication, to give users what they are looking for.</p>
-                </div> 
             </div>
-        </div>
-        <div>
+            <div>
 
-        </div>
-    </section>
-    <section class="work">
-        <div class="work__header">
-            <div>
-                <h2>My work</h2>
-                <p>know more about what i do</p>
             </div>
-            <div>
-                <button>All</button>
-                <button>Illustrations</button>
-                <button>Graphic Desing</button>
-                <button>Ux/Ui Desing</button>
+        </section>
+    <a name="work" id="work"></a>
+        <section  class="work">
+            <div class="work__header">
+                <div>
+                    <h2>My work</h2>
+                    <p>know more about what i do</p>
+                </div>
+                <div>
+                    <button id="b_all" class="b_categoria">All</button>
+                    <button id="b_illus" class="b_categoria">Illustrations</button>
+                    <button id="b_gd" class="b_categoria">Graphic Desing</button>
+                    <button id="b_ux" class="b_categoria">Ux/Ui Desing</button>
+                </div>
             </div>
-        </div>
-        <div>
+            <div id="projects" class="work__projects">
 
-        </div>
-    </section>
-    <section class="commisions">
-        <div>
-            <h2>Comissions are open!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-            <button>Contact me!</button>
-        </div>
-        <div>
-            <div>
-                <h2>Contact</h2>
+            </div>
+        </section>
+    <a name="about" id="contact"></a>
+        <section class="comissions">
+            <div class="com__open">
+                <h2>Comissions are open!</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                <h3>Celeste.D.012@hotmail.com</h3>
+                <button>Contact me!</button>
             </div>
-            <div>
-                <form>
-                    <P>
-                    <LABEL for="nombre">Nombre: </LABEL>
-                              <INPUT type="text" id="nombre"><BR>
-                    <LABEL for="email">E-Mail: </LABEL>
-                              <INPUT type="text" id="email"><BR>
-                    <LABEL for="message">Message: </LABEL>
-                              <INPUT type="text" id="message"><BR>
-                    <INPUT type="submit" value="Enviar"> <INPUT type="reset">
-                    </P>
-                </form>
+            <div class="com__form">
+                <div class="com__form--contact">
+                    <h2>Contact</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                    <h3>Celeste.D.012@hotmail.com</h3>
+                </div>
+                <div>
+                    <form>          
+                        <div class="form__items">
+                                <h3>Contact me</h3>
+                                <INPUT type="text" id="nombre" placeholder="Name:"><BR>                 
+                                <INPUT type="text" id="email" placeholder="E-Mail:"><BR>               
+                                <INPUT type="text" id="message" placeholder="Message:" class="input--mes"><BR>
+                        <INPUT type="submit" value="Send" class="form--send"> 
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
     <footer>
+
         <h3>Celeste Davalos © 2022 </h3>
         <div class="social__footer">
             <a href="">
-                <img  src="img/Img-Behance.png">
+                <img  src="img/Img-Behance-whiter.png">
             </a> 
             <a href="">
-                <img  src="img/Img-Instagram.png">
+                <img  src="img/Img-Instagram-white.png">
             </a> 
             <a href="">
-                <img  src="img/Img-LinkedIn.png">
+                <img  src="img/Img-LinkedIn-white.png">
             </a> 
             <a href="">
-                <img src="img/Img-Twitter.png">
+                <img src="img/Img-Twitter-white.png">
             </a> 
         </div>
     </footer>
 
-<script src="main2.js"></script>
+
 
 <!-- Swiper JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -191,6 +193,7 @@
         },
       });
     </script>
+    <script src="main2.js"></script>
 </script>
 </body>
 </html>
