cambio de nombre de carp img a img1

--- a/comissions.html
+++ b/comissions.html
@@ -20,15 +20,15 @@
 <body>
     <nav>
         <div class="navBar">
-            <img class="iconoLogo" src="./img/Icono.png" alt="logo">
+            <img class="iconoLogo" src="./img1/Icono.png" alt="logo">
                 <p class="celeste ">Celeste Donuts Art</p>
             <button class="btnAbout">About me</button>
             <button class="btnWork">My word</button>
             <button class="btnContact">Contact</button>
-            <img class="navTweeter" src="./img/Img-Twitter.png" alt="logoTweeter"><a href=""></a>
-            <img class="navInstagram" src="./img/Img-Instagram.png" alt="logoInstagram"><a href=""></a>
-            <img class="navLinkedin"  src="./img/Img-LinkedIn.png" alt="logo Linkedin"><a href=""></a>
-            <img class="navBehance"  src="./img/Img-Behance.png" alt="logoBehance"><a href=""></a>
+            <img class="navTweeter" src="./img1/img-Twitter.png" alt="logoTweeter"><a href=""></a>
+            <img class="navInstagram" src="./img1/img-Instagram.png" alt="logoInstagram"><a href=""></a>
+            <img class="navLinkedin"  src="./img1/img-LinkedIn.png" alt="logo Linkedin"><a href=""></a>
+            <img class="navBehance"  src="./img1/img-Behance.png" alt="logoBehance"><a href=""></a>
         </div>          
     </nav>
     <header>
@@ -40,7 +40,7 @@
     <section>
         <div class="containerGrilla">
             <div class="card">
-                <img class="cardImg" src="./img/Bust (6).png" alt="">
+                <img class="cardImg" src="./img1/Bust (6).png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Brust</p>
                     <ul class="comissContent">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img/Half Body 2.png" alt="">
+                <img class="cardImg" src="./img1/Half Body 2.png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Half Body</p>
                     <ul class="comissContent">
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img/Full boy (2).jpg" alt="">
+                <img class="cardImg" src="./img1/Full boy (2).jpg" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Full Body</p><ul class="comissContent">
                         <li>Character +25</li>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img/Bust (6).png" alt="">
+                <img class="cardImg" src="./img1/Bust (6).png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Chibi</p>
                     <ul class="comissContent">
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img/Half Body 2.png" alt="">
+                <img class="cardImg" src="./img1/Half Body 2.png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Pets</p>
                     <ul class="comissContent">
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img/Full boy (2).jpg" alt="">
+                <img class="cardImg" src="./img1/Full boy (2).jpg" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Background</p><ul class="comissContent">
                         <li>Custom characters</li>
@@ -167,7 +167,7 @@
                 <div>
                     <div class="cardSomission">
                         <a href="" class="openModal">
-                            <img src="./img/Bust (6).png" alt="" srcset="">
+                            <img src="./img1/Bust (6).png" alt="" srcset="">
                         </a>
                     </div>
                     <p class="textcomission">Project Name</p>
@@ -221,8 +221,8 @@
         <div class="comissFooter">
             <p class="footerContact">Contact</p>
             <p class="footerContacText">Send me a message and I'll get back to you soon :)</p>
-            <img class="iconEmail" src="./img/email.png" alt=""><span class="footerContacTextEmail">Celeste.D.012@hotmail.com</span>
-            <img class="gifAnimated" src="./img/footer-animate.gif" alt="icono donuts animado"></img>
+            <img class="iconEmail" src="./img1/email.png" alt=""><span class="footerContacTextEmail">Celeste.D.012@hotmail.com</span>
+            <img class="gifAnimated" src="./img1/footer-animate.gif" alt="icono donuts animado"></img1>
             <form class="footerContacForm">
                 <input class="footerInputForm" type="text" name="name">
                 <input class="footerInputForm" type="email" name="email">
@@ -232,23 +232,21 @@
         </div>
         <div class="comissFooterBar">
             <span class="footerBarCopyR">Celeste Davalos © 2022</span>
-            <img class="footerIconSocialTwee" src="./img/Img-Twitter-white.png" alt="">
-            <img class="footerIconSocialInst" src="./img/Img-Instagram-white.png" alt="">
-            <img class="footerIconSocialLin" src="./img/Img-LinkedIn-white.png" alt="">
-            <img class="footerIconSocialBe" src="./img/Img-Behance-white.png" alt="">
+            <img class="footerIconSocialTwee" src="./img1/img-Twitter-white.png" alt="">
+            <img class="footerIconSocialInst" src="./img1/img-Instagram-white.png" alt="">
+            <img class="footerIconSocialLin" src="./img1/img-LinkedIn-white.png" alt="">
+            <img class="footerIconSocialBe" src="./img1/img-Behance-white.png" alt="">
         </div>
     </footer>
     <section class="modal">
         <div class="modal__container">
             <div class="carousel">
-                <img src="./img/Full boy (2).jpg" alt="" srcset="">
+                <img src="./img1/Full boy (2).jpg" alt="" srcset="">
             </div>
             <a href="" class="modal__close">X</a>
         </div>
     </section>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 <script src="comission.js"></script>
 </body>
 </html>
