--- a/comissions.html
+++ b/comissions.html
@@ -22,9 +22,9 @@
         <div class="navBar">
             <img class="iconoLogo" src="./img1/Icono.png" alt="logo">
                 <p class="celeste ">Celeste Donuts Art</p>
-            <button class="btnAbout">About me</button>
-            <button class="btnWork">My word</button>
-            <button class="btnContact">Contact</button>
+            <a href="./index.html#about" class="btnAbout">About me</a>
+            <a href="./index.html#work" class="btnWork">My word</a>
+            <a href="#contacto" class="btnContact">Contact</a>
             <img class="navTweeter" src="./img1/img-Twitter.png" alt="logoTweeter"><a href=""></a>
             <img class="navInstagram" src="./img1/img-Instagram.png" alt="logoInstagram"><a href=""></a>
             <img class="navLinkedin"  src="./img1/img-LinkedIn.png" alt="logo Linkedin"><a href=""></a>
@@ -217,7 +217,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="contacto">
         <div class="comissFooter">
             <p class="footerContact">Contact</p>
             <p class="footerContacText">Send me a message and I'll get back to you soon :)</p>
