--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="com__open">
                 <h2>Comissions are open!</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                <button>Contact me!</button>
+                <button><a href="./comissions.html" class="comission">See more</a></button> 
             </div>
             <div class="com__form">
                 <div class="com__form--contact">
@@ -193,7 +193,7 @@
         },
       });
     </script>
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </script>
 </body>
 </html>
