--- a/comissions.html
+++ b/comissions.html
@@ -20,15 +20,15 @@
 <body>
     <nav>
         <div class="navBar">
-            <img class="iconoLogo" src="./img1/Icono.png" alt="logo">
+            <img class="iconoLogo" src="./imgg/Icono.png" alt="logo">
                 <p class="celeste ">Celeste Donuts Art</p>
             <a href="./index.html#about" class="btnAbout">About me</a>
             <a href="./index.html#work" class="btnWork">My word</a>
             <a href="#contacto" class="btnContact">Contact</a>
-            <img class="navTweeter" src="./img1/img-Twitter.png" alt="logoTweeter"><a href=""></a>
-            <img class="navInstagram" src="./img1/img-Instagram.png" alt="logoInstagram"><a href=""></a>
-            <img class="navLinkedin"  src="./img1/img-LinkedIn.png" alt="logo Linkedin"><a href=""></a>
-            <img class="navBehance"  src="./img1/img-Behance.png" alt="logoBehance"><a href=""></a>
+            <a href="#"><img class="navTweeter" src="./imgg/img-Twitter.png" alt="logoTweeter"></a>
+            <a href="#"><img class="navInstagram" src="./imgg/img-Instagram.png" alt="logoInstagram"></a>
+            <a href="#"><img class="navLinkedin"  src="./imgg/img-LinkedIn.png" alt="logo Linkedin"></a>
+            <a href="#"><img class="navBehance"  src="./imgg/img-Behance.png" alt="logoBehance"></a>
         </div>          
     </nav>
     <header>
@@ -40,7 +40,7 @@
     <section>
         <div class="containerGrilla">
             <div class="card">
-                <img class="cardImg" src="./img1/Bust (6).png" alt="">
+                <img class="cardImg" src="./imgg/Bust (6).png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Brust</p>
                     <ul class="comissContent">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img1/Half Body 2.png" alt="">
+                <img class="cardImg" src="./imgg/Half Body 2.png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Half Body</p>
                     <ul class="comissContent">
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img1/Full boy (2).jpg" alt="">
+                <img class="cardImg" src="./imgg/Full boy (2).jpg" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Full Body</p><ul class="comissContent">
                         <li>Character +25</li>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img1/Bust (6).png" alt="">
+                <img class="cardImg" src="./imgg/Bust (6).png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Chibi</p>
                     <ul class="comissContent">
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img1/Half Body 2.png" alt="">
+                <img class="cardImg" src="./imgg/Half Body 2.png" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Pets</p>
                     <ul class="comissContent">
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="cardImg" src="./img1/Full boy (2).jpg" alt="">
+                <img class="cardImg" src="./imgg/Full boy (2).jpg" alt="">
                 <div class="cardTxt">
                     <p class="comissTittle">Background</p><ul class="comissContent">
                         <li>Custom characters</li>
@@ -167,7 +167,7 @@
                 <div>
                     <div class="cardSomission">
                         <a href="" class="openModal">
-                            <img src="./img1/Bust (6).png" alt="" srcset="">
+                            <img src="./imgg/Bust (6).png" alt="" srcset="">
                         </a>
                     </div>
                     <p class="textcomission">Project Name</p>
@@ -221,8 +221,8 @@
         <div class="comissFooter">
             <p class="footerContact">Contact</p>
             <p class="footerContacText">Send me a message and I'll get back to you soon :)</p>
-            <img class="iconEmail" src="./img1/email.png" alt=""><span class="footerContacTextEmail">Celeste.D.012@hotmail.com</span>
-            <img class="gifAnimated" src="./img1/footer-animate.gif" alt="icono donuts animado"></img1>
+            <img class="iconEmail" src="./imgg/email.png" alt=""><span class="footerContacTextEmail">Celeste.D.012@hotmail.com</span>
+            <img class="gifAnimated" src="./imgg/footer-animate.gif" alt="icono donuts animado"></imgg>
             <form class="footerContacForm">
                 <input class="footerInputForm" type="text" name="name">
                 <input class="footerInputForm" type="email" name="email">
@@ -232,16 +232,16 @@
         </div>
         <div class="comissFooterBar">
             <span class="footerBarCopyR">Celeste Davalos © 2022</span>
-            <img class="footerIconSocialTwee" src="./img1/img-Twitter-white.png" alt="">
-            <img class="footerIconSocialInst" src="./img1/img-Instagram-white.png" alt="">
-            <img class="footerIconSocialLin" src="./img1/img-LinkedIn-white.png" alt="">
-            <img class="footerIconSocialBe" src="./img1/img-Behance-white.png" alt="">
+            <img class="footerIconSocialTwee" src="./imgg/img-Twitter-white.png" alt="">
+            <img class="footerIconSocialInst" src="./imgg/img-Instagram-white.png" alt="">
+            <img class="footerIconSocialLin" src="./imgg/img-LinkedIn-white.png" alt="">
+            <img class="footerIconSocialBe" src="./imgg/img-Behance-white.png" alt="">
         </div>
     </footer>
     <section class="modal">
         <div class="modal__container">
             <div class="carousel">
-                <img src="./img1/Full boy (2).jpg" alt="" srcset="">
+                <img src="./imgg/Full boy (2).jpg" alt="" srcset="">
             </div>
             <a href="" class="modal__close">X</a>
         </div>
