Se paso a responsive - menos footer

--- a/comissions.html
+++ b/comissions.html
@@ -21,15 +21,21 @@
 <body>
     <nav>
         <div class="navBar">
-            <img class="iconoLogo" src="./img/Icono.png" alt="logo">
-                <p class="celeste ">Celeste Donuts Art</p>
-            <a href="#contacto" class="btnContact">Contact</a>
-            <a href="./index.html#work" class="btnWork">My work</a>
-            <a href="./index.html#about" class="btnAbout">About me</a>
-            <a href="#"><img class="navTweeter" src="./img/img-Twitter.png" alt="logoTweeter"></a>
-            <a href="#"><img class="navInstagram" src="./img/img-Instagram.png" alt="logoInstagram"></a>
-            <a href="#"><img class="navLinkedin"  src="./img/img-LinkedIn.png" alt="logo Linkedin"></a>
-            <a href="#"><img class="navBehance"  src="./img/img-Behance.png" alt="logoBehance"></a>
+            <div class="contentBranch">
+                <img class="iconoLogo" src="./img/Icono.png" alt="logo">
+                    <p class="celeste ">Celeste Donuts Art</p>
+            </div>
+            <div class="contentLinks">
+                <a href="#contacto" class="btnContact">Contact</a>
+                <a href="./index.html#work" class="btnWork">My work</a>
+                <a href="./index.html#about" class="btnAbout">About me</a>
+            </div>
+            <div class="contentSocial">
+                <a href="https://twitter.com/CelesteDonutArt"><img class="navTweeter" src="./img/img-Twitter.png" alt="logoTweeter"></a>
+                <a href="https://www.instagram.com/celeste_donuts_art/"><img class="navInstagram" src="./img/img-Instagram.png" alt="logoInstagram"></a>
+                <a href="#"><img class="navLinkedin"  src="./img/img-LinkedIn.png" alt="logo Linkedin"></a>
+                <a href="https://www.behance.net/rociocelestedavalos"><img class="navBehance"  src="./img/img-Behance.png" alt="logoBehance"></a>
+            </div>
         </div>          
     </nav>
     <header>
@@ -96,11 +102,11 @@
     <section>
         <div class="noteComission">
             <div>
-                <div class="vectorDraw">
-                    <img src="" alt="">                
-                </div>
-                <p class="comissTittle comissTittleDraw">I will Draw</p>
-                <ul class="comissContenText comissContenTextDraw">
+                <!-- <div class="vectorDraw">
+                </div> -->
+                <img src="./img/check.png" alt="" class="vector">                
+                <p class="comissTittle ">I will Draw</p>
+                <ul class="comissContenText">
                     <li>Original characters</li>
                     <li>Real people</li>
                     <li>FanArt</li>
@@ -110,22 +116,22 @@
                 </ul>
             </div>
             <div>
-                <div class="vectorWork">
-                    <img src="" alt="">                
-                </div>
-                <p class="comissTittle comissTittleWork">Work Terms</p>
-                <ul class="comissContenText comissContenTextWork">
+                <!-- <div class="vectorWork">
+                </div> -->
+                <img src="./img/maleta.png" alt="" class="vector">                
+                <p class="comissTittle ">Work Terms</p>
+                <ul class="comissContenText">
                     <li>After placing the order, I will start with the first sketch.</li>
                     <li>Upon completion of the sketch, it will be sent for you to review.</li>
                     <li>Made the necessary corrections I will proceed to finish the final product.</li>
                 </ul>
             </div>
             <div>
-                <div class="vectorPayment">
-                    <img src="" alt="">                
-                </div>
-                <p class="comissTittle comissTittlePayment">Payment Terms</p>
-                <ul class="comissContenText comissContenTextPayment">
+                <!-- <div class="vectorPayment">
+                </div> -->
+                <img src="./img/paypal.png" alt="" class="vector">                
+                <p class="comissTittle ">Payment Terms</p>
+                <ul class="comissContenText">
                     <li>Payment is via Paypal.</li>
                     <li>Payment is made before starting the first sketch, it can be full payment or half payment.</li>
                     <li>I will not start the final product until I receive payment.</li>
@@ -136,8 +142,8 @@
     <section>
         <div class="comissGallery">
             <div class="comissGalleryCont">
-                <p class="comissTittle ">Commission gallery</p>
-                <p class="comissContentTextGallery ">Check my latest projects</p>
+                <p class="comissTittle ">Gallery</p>
+                <p class="comissContentTextGallery ">Check my latest comissions</p>
             </div>
             <div class="comissGalleryGrilla">                
                 <div>
