Se elimino toda media absolut y se uso flex

--- a/comissions.html
+++ b/comissions.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> 
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet"> 
     <style type="text/css" media="screen, print">
         @font-face {
             font-family: "Bauhaus 93";
