Commit Walter Arreglo errores index

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="container__text--center">
                         <h2>Hello I’m <br> Celeste</h2>
                         <h3>Graphic Designer, UX/UI Designer <br>and Ilustrator</h3>
-                        <button><p>Know me</p></button>
+                        <button><p><a href="#about" class="link__color">Know me</a></p></button>
                     </div>          
                 </div>
                 <div class="container__img">
