--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donuts-Art</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="./img/Icono.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> 
@@ -129,7 +130,7 @@
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
                         <!-- Modal content -->
-                        <div class="modal-content">
+                        <div class="modal-content ">
                             <span class="close"><img src = "img/BUTTONS.svg"/></span>
                             <div id="project__modal"> 
                             
