cambio pedido por Celeste

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="shortcut icon" href="./img/Icono.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> 
-
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,100&display=swap"
+    rel="stylesheet"
+  />
     <link
     rel="stylesheet"
     href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -64,7 +66,7 @@
                 <div class="container__text">
                     <div class="container__text--center">
                         <h2>Hello I’m <br> Celeste</h2>
-                        <h3>Graphic Designer, UX/UI Designer <br>and Ilustrator</h3>
+                        <h3>Illustrator, Graphic Designer <br>and UX/UI Designer</h3>
                         <button><p><a href="#about" class="link__color">Know me</a></p></button>
                     </div>          
                 </div>
@@ -94,7 +96,7 @@
                         </div>
                         <div class="containerSkills container--yellow">
                             <img src="img/Illustration.png">
-                            <h3>Ilustrator</h3>
+                            <h3>Illustrator</h3>
                             <p> I have experience with various types of illustration styles, from the serious to the more animated.</p>
                         </div>    
                         <div class="containerSkills container--blue">
