--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="https://www.instagram.com/celeste_donuts_art/" target="_blank">
                     <img  src="img/Img-Instagram.png">
                 </a> 
-                <a href="" target="_blank">
+                <a href=" https://www.linkedin.com/in/celeste-davalos-a0853117b/" target="_blank">
                     <img  src="img/Img-LinkedIn.png">
                 </a> 
                 <a href="https://twitter.com/CelesteDonutArt" target="_blank">
@@ -71,7 +71,8 @@
                     </div>          
                 </div>
                 <div class="container__img">
-                    <img class="main--img" src="img/home-ilustracion-fondo(pequeño).png">
+                   <!-- <img class="main--img" src="img/home-ilustracion-fondo(pequeño).png">-->
+                   <img class="main--img" src="img/home-ilustracion-fondo.gif">
                 </div>
                 
             </section>
@@ -83,7 +84,7 @@
                             <h2>About me</h2>                          
                             <p>My name is Celeste Davalos and I am a designer and illustrator with experience in backgrounds, illustrations, editorial design, audiovisual content and technological products. I consider myself energetic, observative and analytical based on the aesthetics and functionality of digital products.  </p>                           
                         </div>    
-                    <img src="img/Container3 - Image.png">
+                    <img src="img/mi-foto.jpg">
                         
                     </div>
                     <div class="containers">
@@ -113,7 +114,7 @@
             </section>
         <a name="work" id="work"></a>
             <section  class="work" id="My Work">
-                <div class="work__header">
+                <div class="work__header" id="workHeader">
                     <div>
                         <h2>My work</h2>
                         <p>know more about what i do</p>
@@ -184,7 +185,7 @@
                 <a href="https://www.instagram.com/celeste_donuts_art/" target="_blank">
                     <img  src="img/Img-Instagram-white.png">
                 </a> 
-                <a href="">
+                <a href=" https://www.linkedin.com/in/celeste-davalos-a0853117b/">
                     <img  src="img/Img-LinkedIn-white.png" target="_blank">
                 </a> 
                 <a href="https://twitter.com/CelesteDonutArt" target="_blank">
